# pwv_obstech

./: .gitignore  README.md  classifiers.txt  pyproject.toml  requirements.txt
obsdata/VERT00CHL/2024-04-08/: VERT00CHL_R_20240991530_15M_30S_MO.rnx  VERT00CHL_R_20240991545_15M_30S_MO.rnx  VERT00CHL_R_20240991600_15M_30S_MO.rnx  VERT00CHL_R_20240991615_15M_30S_MO.rnx  VERT00CHL_R_20240991630_15M_30S_MO.rnx  VERT00CHL_R_20240991645_15M_30S_MO.rnx  VERT00CHL_R_20240991700_15M_30S_MO.rnx  VERT00CHL_R_20240991715_15M_30S_MO.rnx  VERT00CHL_R_20240991730_15M_30S_MO.rnx  VERT00CHL_R_20240991745_15M_30S_MO.rnx  VERT00CHL_R_20240991800_15M_30S_MO.rnx  VERT00CHL_R_20240991815_15M_30S_MO.rnx  VERT00CHL_R_20240991830_15M_30S_MO.rnx  VERT00CHL_R_20240991845_15M_30S_MO.rnx  VERT00CHL_R_20240991900_15M_30S_MO.rnx  VERT00CHL_R_20240991915_15M_30S_MO.rnx  VERT00CHL_R_20240991930_15M_30S_MO.rnx  VERT00CHL_R_20240991945_15M_30S_MO.rnx  VERT00CHL_R_20240992000_15M_30S_MO.rnx  VERT00CHL_R_20240992015_15M_30S_MO.rnx  VERT00CHL_R_20240992030_15M_30S_MO.rnx  VERT00CHL_R_20240992045_15M_30S_MO.rnx  VERT00CHL_R_20240992100_15M_30S_MO.rnx  VERT00CHL_R_20240992115_15M_30S_MO.rnx  VERT00CHL_R_20240992130_15M_30S_MO.rnx  VERT00CHL_R_20240992145_15M_30S_MO.rnx  VERT00CHL_R_20240992200_15M_30S_MO.rnx  VERT00CHL_R_20240992215_15M_30S_MO.rnx  VERT00CHL_R_20240992230_15M_30S_MO.rnx  VERT00CHL_R_20240992245_15M_30S_MO.rnx  VERT00CHL_R_20240992300_15M_30S_MO.rnx  VERT00CHL_R_20240992315_15M_30S_MO.rnx  (+2 more)
src/pwv_obstech/: __init__.py  csrs.py  mapping.py  pwv.py  ublox.py
tests/: meteosql.py
(+571 files in other folders)
